# pygobject

./: Makefile.am  configure.ac  configure.ini  pygobject-3.0.pc.in
demo/: demo.py
demos/: Makefile.am
demos/gtk-demo/: Makefile.am  gtk-demo.py
demos/gtk-demo/demos/: Makefile.am  compositetemplate.py  parallelcomputing.py  spin_selector.ui
demos/gtk-demo/demos/Css/: Makefile.am
demos/gtk-demo/demos/Entry/: Makefile.am  search_entry.py
demos/gtk-demo/demos/IconView/: Makefile.am
demos/gtk-demo/demos/OpenGL/: scene.py
demos/gtk-demo/demos/TreeView/: Makefile.am
demos/gtk-demo/demos/data/: Makefile.am
docs/: Makefile.am
examples/: Makefile.am  threads-cli.py
gi/: Makefile.am  __init__.py  _error.py  cairocffi.h  docstring.py  gi-sources.list  gimodule.c  girepository.py  gobjectmodule.c  importer.py  module.py  pygboxed.c  pygi-arg-basictype.c  pygi-arg-basictype.h  pygi-arg-callback.c  pygi-arg-callback.h  pygi-arg-enum-flags.c  pygi-arg-enum-flags.h  pygi-arg-garray.c  pygi-arg-garray.h  pygi-arg-gerror.c  pygi-arg-gerror.h  pygi-arg-ghashtable.c  pygi-arg-ghashtable.h  pygi-arg-glist.c  pygi-arg-glist.h  pygi-arg-gobject.c  pygi-arg-gobject.h  pygi-arg-struct.c  pygi-arg-struct.h  pygi-argument.c  pygi-argument.h  pygi-array.c  pygi-array.h  pygi-boxed.c  pygi-cache.c  pygi-cache.h  pygi-closure.c  pygi-closure.h  pygi-foreign-cairo.c  (+35 more)
gi/_glib/: pyglib-python-compat.h
gi/_gobject/: gobjectmodule.c  propertyhelper.py  pygobject.c  pygtype.c  signalhelper.py
gi/codegen/: Makefile.am  codegen.py  cpython.template.c  cpython.template.h
gi/overrides/: GLib.py  GObject.py  Gdk.py  Gio.py  Gtk.py  __init__.py  keysyms.py
m4/: ini-file.m4  ini-file.test
py3build/gi/overrides/: GObject.py
pygtkcompat/: pygtkcompat.py
tests/: Makefile.am  compat_test_pygtk.py  gimarshallingtestsextra.c  gimarshallingtestsextra.h  runtests.py  test_error.py  test_everything.py  test_gi.py  test_gio.py  test_glib.py  test_gobject.py  test_import_machinery.py  test_mainloop.py  test_marshaling_basic_types.c  test_overrides.py  test_overrides_gtk.py  test_properties.py  test_repository.py  test_signal.py  test_template.ui  testhelpermodule.c
tools/: pygi-codegen
