SUBDIRS = Css data Entry IconView TreeView

EXTRA_DIST =            \
    appwindow.py        \
    assistant.py        \
    builder.py          \
    button_box.py       \
    clipboard.py        \
    colorselector.py    \
    combobox.py         \
    dialogs.py          \
    drawingarea.py      \
    expander.py         \
    images.py           \
    infobars.py         \
    __init__.py         \
    links.py            \
    menus.py            \
    pickers.py          \
    pixbuf.py           \
    printing.py         \
    rotatedtext.py      \
    test.py

